--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/supabase-js": "^2.38.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
