--- a/package.json
+++ b/package.json
@@ -1,43 +1,45 @@
 {
-  "name": "quill",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@supabase/auth-helpers-nextjs": "^0.8.1",
-    "@supabase/auth-helpers-react": "^0.4.2",
-    "@supabase/auth-ui-react": "^0.4.5",
-    "@supabase/auth-ui-shared": "^0.1.7",
-    "@supabase/supabase-js": "^2.38.0",
-    "next": "latest",
-    "query-string": "^8.1.0",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-hook-form": "^7.47.0",
-    "react-icons": "^4.11.0",
-    "sonner": "^1.0.3",
-    "stripe": "^13.8.0",
-    "supabase": ">=1.8.1",
-    "tailwind-merge": "^1.14.0",
-    "uniqid": "^5.4.0",
-    "zustand": "^4.4.2"
-  },
-  "devDependencies": {
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/uniqid": "^5.3.2",
-    "autoprefixer": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest",
-    "typescript": "latest"
-  }
+	"name": "quill",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-slider": "^1.1.2",
+		"@supabase/auth-helpers-nextjs": "^0.8.1",
+		"@supabase/auth-helpers-react": "^0.4.2",
+		"@supabase/auth-ui-react": "^0.4.5",
+		"@supabase/auth-ui-shared": "^0.1.7",
+		"@supabase/supabase-js": "^2.38.0",
+		"next": "13.5.4",
+		"query-string": "^8.1.0",
+		"react": "latest",
+		"react-dom": "latest",
+		"react-hook-form": "^7.47.0",
+		"react-icons": "^4.11.0",
+		"sonner": "^1.0.3",
+		"stripe": "^13.9.0",
+		"supabase": ">=1.8.1",
+		"tailwind-merge": "^1.14.0",
+		"uniqid": "^5.4.0",
+		"use-sound": "4.0.1",
+		"zustand": "^4.4.3"
+	},
+	"devDependencies": {
+		"@types/node": "20.8.3",
+		"@types/react": "18.2.25",
+		"@types/react-dom": "18.2.11",
+		"@types/uniqid": "^5.3.2",
+		"autoprefixer": "latest",
+		"eslint": "8.51.0",
+		"eslint-config-next": "13.5.4",
+		"postcss": "8.4.31",
+		"tailwindcss": "latest",
+		"typescript": "latest"
+	}
 }
