--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-dom": "latest",
 		"react-hook-form": "^7.47.0",
 		"react-icons": "^4.11.0",
+		"react-spinners": "^0.13.8",
 		"sonner": "^1.0.3",
 		"stripe": "^13.9.0",
 		"supabase": ">=1.8.1",
